# Enterprise-AI-Cybersecurity-Investigation-Agent

./: .gitignore  README.md  pyproject.toml
doc/: architecture_backlog.md
src/cybersecurity_agent/core/: orchestrator.py
src/cybersecurity_agent/memory/: investigation_memory.py
src/cybersecurity_agent/planning/: information_gain.py  mission_manager.py  planner.py  utility.py
tests/: test_investigation_memory.py  test_mission_manager.py  test_orchestrator.py  test_planner.py
